trunk/Archive2/76/4635c6a3306432/output
main.cpp:18:5: error: 'PrivateFunction' is a private member of 'MyClass<int>'
  a.PrivateFunction();
    ^
main.cpp:9:8: note: declared private here
  void PrivateFunction() { 
       ^
1 error generated.
